added more pictures and a login page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Angkor&family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet"> 
+    
 
 </head>
 <body>
@@ -20,9 +21,8 @@
         </div>
         <div class="nav-right">
             <ul class="list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Plans</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="plans.html">Plans</a></li>
                 <li id="Login"><a href="#">Login</a></li>   
             </ul>
         </div>
