--- a/plans.html
+++ b/plans.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="plans.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Angkor&family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
-    
+
+    <div class="nav">
+        <div class="nav-left">
+            <span class="logo"> KeeganNealFitness </span>
+        </div>
+        <div class="nav-right">
+            <ul class="list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="plans.html">Plans</a></li>
+                <li id="Login"><a href="#">Login</a></li>   
+            </ul>
+        </div>
+    </div>
+    <h1>
+        Plans
+    </h1>
+
+    <div class="card-container">
+        <div class="card">
+            <img src="Pictures/dumbbell.jpg" alt="Denim Jeans" style="width:100%">
+            <h1>Tailored Jeans</h1>
+            <p class="price">$19.99</p>
+            <p>Some text about the jeans..</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card">
+            <img src="Pictures/bodybuilder.jpg" alt="Denim Jeans" style="width:100%">
+            <h1>Tailored Jeans</h1>
+            <p class="price">$19.99</p>
+            <p>Some text about the jeans..</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+    </div>
 </body>
 </html>
