maiing sure these are commited

--- a/plans.html
+++ b/plans.html
@@ -33,7 +33,7 @@
     <div class="card-container">
         <div class="card">
             <img src="Pictures/dumbbell.jpg" alt="Denim Jeans" style="width:100%">
-            <h1>Tailored Jeans</h1>
+            <h1>Workout</h1>
             <p class="price">$19.99</p>
             <p>Some text about the jeans..</p>
             <p><button>Add to Cart</button></p>
