--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="plans.html">Plans</a></li>
-                <li id="Login"><a href="#">Login</a></li>   
+                <li id="Login"><a href="login.html">Login</a></li>   
             </ul>
         </div>
     </div>
