--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="about-container">
-        <h1 class="about-h1"> About KeeganNealFitness</h1>
+        <h1 class="about-h1"> About </h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, atque molestiae eius maxime et magnam porro sequi, voluptatem optio pariatur sunt aliquam doloribus quaerat
          iure placeat libero ratione? Asperiores, ab?</p>
 
