--- a/plans.html
+++ b/plans.html
@@ -33,16 +33,16 @@
     <div class="card-container">
         <div class="card">
             <img src="Pictures/dumbbell.jpg" alt="Denim Jeans" style="width:100%">
-            <h1>Workout</h1>
+            <h1>Workout Plans</h1>
             <p class="price">$19.99</p>
-            <p>Some text about the jeans..</p>
+            <p>8 week workout plan to help you lose weight and build muscle</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="card">
             <img src="Pictures/bodybuilder.jpg" alt="Denim Jeans" style="width:100%">
-            <h1>Tailored Jeans</h1>
-            <p class="price">$19.99</p>
-            <p>Some text about the jeans..</p>
+            <h1>Competition Prep</h1>
+            <p class="price">$250.00</p>
+            <p>Take you mind and body to the next level to get ready to set on stage</p>
             <p><button>Add to Cart</button></p>
         </div>
     </div>
